# toolbox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
prepare_toolbox/: command.py  communicate.py  core.py  file.py  zip.py
tests/: test_command.py  test_core.py  test_file.py  test_zip.py
tests/testproject/: pom.xml
tests/testproject/src/main/java/gradelist/: AssessmentResult.java  GradeList.java  Test.java
tests/testproject/src/test/java/gradelist/: AssessmentResultTest.java  GradeListTest.java
